--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Döner AI</title>
     <link rel="icon" type="image/webp" href="IMG_20260120_134136_893.webp">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <style>
         * {
             margin: 0;
